# AI-RAG

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt
data/html/: sample2.html
data/text_files/: machine_learning.txt  python_intro.txt
